# llm-api-tester

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  create_token.js  git_security_audit.py  pyproject.toml  requirements.txt  test_config_quick.py  test_refactoring_comprehensive.py
colab-setup/: README.md  flux_boundary_test_colab.ipynb  start_colab_mcp.ps1
configs/: platforms.yaml
crawler/: README.md  errors.py  logger.py  main.py  models.py  requirements.txt  scraper.py  simple_tester.py  speed_tester.py  tester.py  zhipu_speed_test.py
docs/: API_KEY_SETUP.md  PROJECT_PRINCIPLES.md  REFACTOR_PRINCIPLES.md  SECURITY_AUDIT_REPORT.md  SORTING_FEATURE.md  TESTING_VERIFICATION_REPORT.md
examples/: README.md  base_example.py  gemma_4_31b_it.py  glm4_7.py  glm5.py  minimax_m2_7.py  qwen3_5_122b_a10b.py  step_3_5_flash.py  usage_with_config_loader.py
report/: __init__.py  generator.py
reports/: key_exploration_report_20260517_211417.md  key_exploration_report_20260517_211514.md  nvidia_api_status.md  speedtest_20models.json  speedtest_favorites.json  speedtest_favorites_v2.json  speedtest_known_working.json  speedtest_results.json
scripts/: batch_test.py  key_exploration_test.py  run_comprehensive.py  run_flux_image.py  run_nvidia.py  run_zhipu.py  run_zhipu_speed.py  setup_env.py  test_flux_image.py  test_nvidia.py  test_zhipu.py
src/: __init__.py  base_client.py  config_loader.py  model_classifier.py  models.py  nvidia_client.py  platform_config.py  platform_registry.py  ssl_config.py  (+1 more)
(+108 files in other folders)
