[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "api-key-test"
version = "2.0.0"
description = "多平台 AI API 模型测试框架"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "httpx",
    "pyyaml",
    "python-dotenv",
    "certifi",
    "playwright",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "detect-secrets",
]

[project.scripts]
api-test = "scripts.batch_test:main"

[tool.setuptools.packages.find]
include = ["src*", "platforms*", "crawler*", "report*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
